--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,10 +9,34 @@ spring:
         hibernate:
             ddl-auto: update
 
-    main:
-        web-application-type: none
+#    main:
+#        web-application-type: none
 
 logging:
     level:
         root : info
+
+#server:
+#    port: 3035
+
+
+#spring:
+#    h2:
+#        console:
+#            enabled: true
+#            path: /h2-console
+#    datasource:
+#        url: jdbc:h2:file:./src/main/resources/notedb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;
+#        driver-class-name: org.h2.Driver
+#        username: root
+#        password: Aldana123456.
+#    jpa:
+#        database-platform: org.hibernate.dialect.H2Dialect
+#        hibernate:
+#            ddl-auto: update
+#server:
+#    port: 8081
+#spring.main.web-application-type: none
+
+
 
