--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,47 +1,30 @@
 
-spring:
-    datasource:
-        url: jdbc:mysql://localhost:3306/notes?serverTimezone=${user.timezone}
-        driver-class-name: com.mysql.cj.jdbc.Driver
-        username: root
-        password: Aldana123456.
-    jpa:
-        hibernate:
-            ddl-auto: update
-
-#    main:
-#        web-application-type: none
+server:
+    port: ${PORT:8080}
+    servlet:
+        context-path: "/api/v1"
 
 logging:
     level:
-        root : info
+        org:
+            hibernate:
+                SQL: DEBUG
+
+application:
+    jwt:
+        secret-key: secretKeyToGenerateJWTs
+        token-prefix: "Bearer "
+        login-expire-length: 86400000
+        reset-password-expire-length: 60000
+
+spring:
+    profiles:
+        active: dev
+    jpa:
+        show-sql: true
+        hibernate:
+            ddl-auto: update
 
 mailgun:
-    api_key: 68e2da4e54e3363478016a4b1a5d4b8b
-    domain_name: sandboxa564d5acd27e4825ba05ebca2267b119.mailgun.org
-
-
-#server:
-#    port: 3035
-
-
-#spring:
-#    h2:
-#        console:
-#            enabled: true
-#            path: /h2-console
-#    datasource:
-#        url: jdbc:h2:file:./src/main/resources/notedb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;
-#        driver-class-name: org.h2.Driver
-#        username: root
-#        password: Aldana123456.
-#    jpa:
-#        database-platform: org.hibernate.dialect.H2Dialect
-#        hibernate:
-#            ddl-auto: update
-#server:
-#    port: 8081
-#spring.main.web-application-type: none
-
-
-
+    api_key:
+    domain_name:
