added dependencies for j-unit test

--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,12 @@
                     <groupId>org.junit.vintage</groupId>
                     <artifactId>junit-vintage-engine</artifactId>
                 </exclusion>
+
+                    <exclusion>
+                        <groupId>com.vaadin.external.google</groupId>
+                        <artifactId>android-json</artifactId>
+                    </exclusion>
+
             </exclusions>
         </dependency>
         <dependency>
